# mimos

./: .gitignore  contributing.md  pyproject.toml  readme.md  requirements.txt  setup.cfg  test.py  unitvector.py
.github/workflows/: mimos-deployment.yaml  mimos-integration.yaml  mimos.yaml
blendfiles/: Sample.blend
docs/mimos/: body.html  config.html  humanoid.html  index.html  network.html
docs/mimos/sensors/: base.html  index.html
docs/mimos/sensors/vision/: index.html  rgbcamera.html
docs/mimos/skeleton/: base.html  index.html
docs/mimos/skeleton/blender/: blender.html  index.html
docs/mimos/skeleton/commands/: executors.html  index.html  types.html
docs/mimos/utils/: index.html
example/: test.py
mimos/: __init__.py  body.py  config.py
mimos/skeleton/: base.py  blender.py
mimos/skeleton/commands/: __init__.py  executors.py  types.py
src/mimos/: __init__.py  body.py  config.py  humanoid.py  network.py
src/mimos/controllers/: __init__.py
src/mimos/controllers/mimic/: __init__.py  blenderconfig.json  main.py  mimic.config.json  translate.py  utils.py
src/mimos/controllers/mimic/config/: blender.config.json  mimic.config.json
src/mimos/sensors/: __init__.py  base.py
src/mimos/sensors/vision/: __init__.py  rgbcamera.py
src/mimos/skeleton/: __init__.py  base.py  blender.py  utils.py
src/mimos/skeleton/blender/: __init__.py  blender.py  operator.py  operator.py.tpl
src/mimos/skeleton/commands/: __init__.py  executors.py  types.py
src/mimos/utils/: __init__.py  channel.py
test/: conftest.py  test_body.py  test_humanoid.py
