[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimos"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.6.0.66"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/machanirobotics/mimos"
"Bug Tracker" = "https://github.com/machanirobotics/mimos/issues"

[tool.setuptools.dynamic]
version = {attr = "mimos.__version__"}
